attempt to fix dynamic save button ahh

--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -361,20 +361,20 @@
                     Background
                 </h2>
                 <div id="backgroundpickercontainer">
-                <a class="aintext backgroundpicker bgbtnn" id="bgbtn1" onmouseup="setbg('1', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_1.png"></div></a>
-                <a class="aintext backgroundpicker bgbtnn" id="bgbtn2" onmouseup="setbg('2', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_2.png"></div></a>
-                <a class="aintext backgroundpicker bgbtnn" id="bgbtn3" onmouseup="setbg('3', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_3.png"></div></a>
-                <a class="aintext backgroundpicker bgbtnn" id="bgbtn4" onmouseup="setbg('4', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_4.png"></div></a>
+                <a class="aintext backgroundpicker bgbtnn" id="bgbtn1" onmouseup="setbg('1', 'manual'); SetCountDowngeneral();"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_1.png"></div></a>
+                <a class="aintext backgroundpicker bgbtnn" id="bgbtn2" onmouseup="setbg('2', 'manual'); SetCountDowngeneral();"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_2.png"></div></a>
+                <a class="aintext backgroundpicker bgbtnn" id="bgbtn3" onmouseup="setbg('3', 'manual'); SetCountDowngeneral();"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_3.png"></div></a>
+                <a class="aintext backgroundpicker bgbtnn" id="bgbtn4" onmouseup="setbg('4', 'manual'); SetCountDowngeneral();"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_4.png"></div></a>
                 <br />
-                <a class="aintext backgroundpicker bgbtnn" id="bgbtn5" onmouseup="setbg('5', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_5.png"></div></a>
-                <a class="aintext backgroundpicker bgbtnn" id="bgbtn6" onmouseup="setbg('6', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_6.png"></div></a>
-                <a class="aintext backgroundpicker bgbtnn" id="bgbtn7" onmouseup="setbg('7', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_7.png"></div></a>
-                <a class="aintext backgroundpicker bgbtnn" id="bgbtn8" onmouseup="setbg('8', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_8.png"></div></a>
+                <a class="aintext backgroundpicker bgbtnn" id="bgbtn5" onmouseup="setbg('5', 'manual'); SetCountDowngeneral();"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_5.png"></div></a>
+                <a class="aintext backgroundpicker bgbtnn" id="bgbtn6" onmouseup="setbg('6', 'manual'); SetCountDowngeneral();"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_6.png"></div></a>
+                <a class="aintext backgroundpicker bgbtnn" id="bgbtn7" onmouseup="setbg('7', 'manual'); SetCountDowngeneral();"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_7.png"></div></a>
+                <a class="aintext backgroundpicker bgbtnn" id="bgbtn8" onmouseup="setbg('8', 'manual'); SetCountDowngeneral();"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_8.png"></div></a>
                 <br />
-                <a class="aintext backgroundpicker bgbtnn" id="bgbtn9" onmouseup="setbg('9', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_9.png"></div></a>
-                <a class="aintext backgroundpicker bgbtnn" id="bgbtn10" onmouseup="setbg('10', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_10.png"></div></a>
-                <a class="aintext backgroundpicker bgbtnn" id="bgbtn11" onmouseup="setbg('11', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_11.png"></div></a>
-                <a class="aintext backgroundpicker bgbtnn" id="bgbtn12" onmouseup="setbg('12', 'manual')"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_12.png"></div></a>
+                <a class="aintext backgroundpicker bgbtnn" id="bgbtn9" onmouseup="setbg('9', 'manual'); SetCountDowngeneral();"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_9.png"></div></a>
+                <a class="aintext backgroundpicker bgbtnn" id="bgbtn10" onmouseup="setbg('10', 'manual'); SetCountDowngeneral();"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_10.png"></div></a>
+                <a class="aintext backgroundpicker bgbtnn" id="bgbtn11" onmouseup="setbg('11', 'manual'); SetCountDowngeneral();"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_11.png"></div></a>
+                <a class="aintext backgroundpicker bgbtnn" id="bgbtn12" onmouseup="setbg('12', 'manual'); SetCountDowngeneral();"><div><img style="width:0.85in; height: 0.35in; border-radius: 10px; margin-top:0.07in; filter:blur(5px);" src="Backgrounds/enhancedbackground_12.png"></div></a>
                 </div>
                 <br />
                 <br />
@@ -385,10 +385,10 @@
                 <h2 class="textelement" style="font-family: 'Dosis';">
                     Typeface
                 </h2>
-                <a class="aintext selectedfontpicker" id="fredoka" style="font-family:'Fredoka One'" onmouseup="FontFredoka('Manual');">12:34</a>
-                <a class="aintext fontpicker" id="poppins" style="font-family:'Poppins'" onmouseup="FontPoppins('Manual');">12:34</a>
-                <a class="aintext fontpicker" id="dmserif" style="font-family: 'DM Serif Display', serif;" onmouseup="FontDMSerif('Manual');">12:34</a>
-                <a class="aintext fontpicker" id="orbitron" style="font-family:'Orbitron'" onmouseup="FontOrbitron('Manual');">12:34</a>
+                <a class="aintext selectedfontpicker" id="fredoka" style="font-family:'Fredoka One'" onmouseup="FontFredoka('Manual'); SetCountDowngeneral();">12:34</a>
+                <a class="aintext fontpicker" id="poppins" style="font-family:'Poppins'" onmouseup="FontPoppins('Manual'); SetCountDowngeneral();">12:34</a>
+                <a class="aintext fontpicker" id="dmserif" style="font-family: 'DM Serif Display', serif;" onmouseup="FontDMSerif('Manual'); SetCountDowngeneral();">12:34</a>
+                <a class="aintext fontpicker" id="orbitron" style="font-family:'Orbitron'" onmouseup="FontOrbitron('Manual'); SetCountDowngeneral();">12:34</a>
                 <br>
                 <br>
                 <Br>
