--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -274,15 +274,15 @@
                     <div class="icon"><i id="left" class="fa-solid fa-angle-left"></i></div>
                     <ul class="tabs-box" id="tabs-box">
                         <!--<li id="customtab" class="tab active">Custom</li>-->
-                        <li title="Automatically pick the next upcoming holiday" id="autopilottab" class="autopilottab" onclick="autopilottab(); autopilotsparkle(event);"><i class="fa-solid fa-compass"></i> Autopilot</li>
-                        <li id="endtab" class="mcatab" onclick="MES();">MCA</li>
-                        <li id="nydtab" class="tab" onclick="NYD();">New Year's Day</li>
-                        <li id="vdtab" class="tab" onclick="VD();">Valentine's Day</li>
-                        <li id="endtab" class="tab" onclick="EASTER();">Easter</li>
-                        <li id="idtab" class="tab" onclick="ID();">Independence Day</li>
-                        <li id="htab" class="tab" onclick="H();">Halloween</li>
-                        <li id="ttab" class="tab" onclick="T();">Thanksgiving</li>
-                        <li id="ctab" class="tab" onclick="C();">Christmas</li>
+                        <li title="Automatically pick the next upcoming holiday" id="autopilottab" class="autopilottab" onclick="autopilottab(); autopilotsparkle(event); SetCountDowngeneral();"><i class="fa-solid fa-compass"></i> Autopilot</li>
+                        <li id="endtab" class="mcatab" onclick="MES(); SetCountDowngeneral();">MCA</li>
+                        <li id="nydtab" class="tab" onclick="NYD(); SetCountDowngeneral();">New Year's Day</li>
+                        <li id="vdtab" class="tab" onclick="VD(); SetCountDowngeneral();">Valentine's Day</li>
+                        <li id="endtab" class="tab" onclick="EASTER(); SetCountDowngeneral();">Easter</li>
+                        <li id="idtab" class="tab" onclick="ID(); SetCountDowngeneral();">Independence Day</li>
+                        <li id="htab" class="tab" onclick="H(); SetCountDowngeneral();">Halloween</li>
+                        <li id="ttab" class="tab" onclick="T(); SetCountDowngeneral();">Thanksgiving</li>
+                        <li id="ctab" class="tab" onclick="C(); SetCountDowngeneral();">Christmas</li>
                     </ul>
                     <div class="icon"><i id="right" class="fa-solid fa-angle-right"></i></div>
                 </div>
