--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -117,6 +117,8 @@
         </video>
     </center>
 
+    <div id="toast-container"></div>
+
     <div class="cookiebanner" id="cookie-banner">
         <img id="cookiebannerimg" src="Backgrounds/cookie_bite.png">
         <div>
