--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
