--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -203,10 +203,10 @@
                 <br>
                 <Br>
                 <h1 class="textelement">Options</h1>
-                <p class="textelement" style="font-size: 15px; color:#989898 !important; max-width:85%;">
-		<a style="font-family: 'Dosis' , sans-serif; color:#666666 !important; margin-left:30px; margin-bottom:10px;" class="aintext dependencieslink" href="http://605958.xyz/"><i style="margin-right:10px;" class="fa-solid fa-house"></i> Home</a>
-                    <a style="font-family: 'Dosis' , sans-serif; color:#666666 !important; margin-left:30px; margin-bottom:10px;" class="aintext dependencieslink" href="Information/cookiepolicy"><i style="margin-right:10px;" class="fa-solid fa-cookie-bite"></i> Cookie Policy</a>
-                    <a style="font-family: 'Dosis', sans-serif; color:#666666 !important; margin-left:30px;" class="aintext dependencieslink" href="Information/dependencies"><i style="margin-right:10px;" class="fa-solid fa-file-code"></i> Dependencies</a>
+                <p class="textelement" style="max-width:85%;">
+		<a class="aintext dependencieslink" href="http://605958.xyz/"><i style="margin-right:10px;" class="fa-solid fa-house"></i> Home</a>
+                    <a class="aintext dependencieslink" href="Information/cookiepolicy"><i style="margin-right:10px;" class="fa-solid fa-cookie-bite"></i> Cookie Policy</a>
+                    <a class="aintext dependencieslink" href="Information/dependencies"><i style="margin-right:10px;" class="fa-solid fa-file-code"></i> Dependencies</a>
                 </p>
                 <br>
                 <Br>
