--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -272,7 +272,7 @@
                     <div class="icon"><i id="left" class="fa-solid fa-angle-left"></i></div>
                     <ul class="tabs-box" id="tabs-box">
                         <!--<li id="customtab" class="tab active">Custom</li>-->
-                        <li title="Automatically pick the next upcoming holiday" id="autopilottab" class="autopilottab" onclick="autopilottab(); autopilotsparkle(event); SetCountDowngeneral();"><i class="fa-solid fa-compass"></i> Autopilot</li>
+                        <li title="Timekeeper will automatically pick the next upcoming holiday" id="autopilottab" class="autopilottab" onclick="autopilottab(); autopilotsparkle(event); SetCountDowngeneral();"><i class="fa-solid fa-compass"></i> Second Sense</li>
                         <li id="endtab" class="mcatab" onclick="MES(); SetCountDowngeneral();">MCA</li>
                         <li id="nydtab" class="tab" onclick="NYD(); SetCountDowngeneral();">New Year's Day</li>
                         <li id="vdtab" class="tab" onclick="VD(); SetCountDowngeneral();">Valentine's Day</li>
@@ -292,7 +292,7 @@
                 </h2>
                 <input onblur="setcountdowntitle('settings');" id="cdtitlesettings" class="input" placeholder="Pick a title" style="margin-bottom:75px;" />
                 <button style="background:transparent; color:white; border:none; outline:none; cursor:pointer">
-                    <i id="magictitle" title="Magic Title" class="fa fa-wand-magic-sparkles" style="transform:scale(1.75); padding-left:10px;" onclick="magictitle(); autopilotsparkle(event);"></i>
+                    <i id="magictitle" title="Timekeeper will automatically select a title for your Countdown" class="fa fa-wand-magic-sparkles" style="transform:scale(1.75); padding-left:10px;" onclick="magictitle(); autopilotsparkle(event);"></i>
                 </button>
                 <h2 class="textelement" style="font-family: 'Dosis';" id="linkoptions">
                     Link
@@ -614,7 +614,7 @@
             <div id="autopilotinfo" style="margin-left: 60px;">
                 <h3 style="position: relative; display: inline-block; background-color: white; border-radius: 20px; padding: 5px 10px 5px 10px;">
                     <span style="color: #11371f;">
-                        <i class="fa-solid fa-compass"></i> AUTOPILOT
+                        <i class="fa-solid fa-compass"></i> TIMEKEEPER
                     </span>
                 </h3>
                 <h1 id="autopilotprediction" style="line-height:0.000001">Finding...</h1>
@@ -636,7 +636,7 @@
             <div id="autopilotinfomobile" style="margin-left: 60px;">
                 <h3 style="position: relative; display: inline-block; background-color: white; border-radius: 20px; padding: 5px 10px 5px 10px;">
                     <span style="color: #11371f;">
-                        <i class="fa-solid fa-compass"></i> AUTOPILOT
+                        <i class="fa-solid fa-compass"></i> TIMEKEEPER
                     </span>
                 </h3>
                 <h1 id="autopilotpredictionmobile" style="line-height:0.000001">Finding...</h1>
