Rebranded Autopilot to Timekeeper

--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -272,7 +272,7 @@
                     <div class="icon"><i id="left" class="fa-solid fa-angle-left"></i></div>
                     <ul class="tabs-box" id="tabs-box">
                         <!--<li id="customtab" class="tab active">Custom</li>-->
-                        <li title="Timekeeper will automatically pick the next upcoming holiday" id="autopilottab" class="autopilottab" onclick="autopilottab(); autopilotsparkle(event); SetCountDowngeneral();"><i class="fa-solid fa-compass"></i> Second Sense</li>
+                        <li title="Timekeeper will automatically pick the next upcoming holiday" id="autopilottab" class="autopilottab" onclick="autopilottab(); autopilotsparkle(event); SetCountDowngeneral();"><i class="fa-solid fa-business-time"></i> Second Sense</li>
                         <li id="endtab" class="mcatab" onclick="MES(); SetCountDowngeneral();">MCA</li>
                         <li id="nydtab" class="tab" onclick="NYD(); SetCountDowngeneral();">New Year's Day</li>
                         <li id="vdtab" class="tab" onclick="VD(); SetCountDowngeneral();">Valentine's Day</li>
