--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -412,6 +412,9 @@
                 <h2 class="textelement" style="font-family: 'Dosis';">Ending Sound</h2>
                 <div class="container">
                     <input class="input" type="text" id="audioLink" onblur="SetCountDowngeneral();" placeholder="Audio link">
+		        <button style="background:transparent; color:white; border:none; outline:none; cursor:pointer">
+           		 <i title="Clear Ending Sound" class="fa-solid fa-circle-xmark" style="transform:scale(1.75); padding-left:10px;" onclick="resetendsoundinput()"></i>
+        		</button>
                 </div>
                 <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">
                     Enter a <i class="fa-brands fa-youtube"></i> YouTube, <i class="fa-brands fa-soundcloud"></i> SoundCloud, or <i class="fa-solid fa-file-audio"></i> audio file link to play on ending.
@@ -502,7 +505,7 @@
 		<h2 style="font-family: 'Dosis';">Starting Date</h2>
 		<input id="progressdatepicker" class="progressdatepicker" type="datetime-local" onblur="SetCountDowngeneral();" />
         <button style="background:transparent; color:white; border:none; outline:none; cursor:pointer">
-            <i title="Copy link" class="fa-solid fa-circle-xmark" style="transform:scale(1.75); padding-left:10px;" onclick="resetprogressinput()"></i>
+            <i title="Turn off Progress" class="fa-solid fa-circle-xmark" style="transform:scale(1.75); padding-left:10px;" onclick="resetprogressinput()"></i>
         </button>
         <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">
             Displays a progress bar to visualize the percent completion, if the event has a starting date
