--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -413,7 +413,7 @@
                 <div class="container">
                     <input class="input" type="text" id="audioLink" onblur="SetCountDowngeneral();" placeholder="Audio link">
 		        <button style="background:transparent; color:white; border:none; outline:none; cursor:pointer">
-           		 <i title="Clear Ending Sound" class="fa-solid fa-circle-xmark" style="transform:scale(1.75); padding-left:10px;" onclick="resetendsoundinput()"></i>
+           		 <i title="Clear Ending Sound" class="fa-solid fa-circle-xmark" style="transform:scale(1.75); padding-left:10px;" onclick="resetendsoundinput();"></i>
         		</button>
                 </div>
                 <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">
@@ -505,7 +505,7 @@
 		<h2 style="font-family: 'Dosis';">Starting Date</h2>
 		<input id="progressdatepicker" class="progressdatepicker" type="datetime-local" onblur="SetCountDowngeneral();" />
         <button style="background:transparent; color:white; border:none; outline:none; cursor:pointer">
-            <i title="Turn off Progress" class="fa-solid fa-circle-xmark" style="transform:scale(1.75); padding-left:10px;" onclick="resetprogressinput()"></i>
+            <i title="Turn off Progress" class="fa-solid fa-circle-xmark" style="transform:scale(1.75); padding-left:10px;" onclick="resetprogressinput();"></i>
         </button>
         <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">
             Displays a progress bar to visualize the percent completion, if the event has a starting date
