--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -575,7 +575,7 @@
                 <br>
     <a id="soce" class="disabled" onclick="soce();"><i class="fa-solid fa-volume-mute"></i> Disable End Sounds</a>
     <a id="memsav" class="disabled" onclick="memsav();"><i class="fa-solid fa-gauge-high"></i> Memory Saver</a>
-	<a onclick="document.documentElement.style.filter = 'contrast(150%)';">Increase Contrast</a>
+	<a id="contrast" class="disabled" onclick="contrast();">Increase Contrast</a>
 
 <br>
     <Br>
