--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -174,6 +174,14 @@ function exportLinks() {
 	URL.revokeObjectURL(url);
 }
 
+document.addEventListener('keydown', (event) => {
+    if (event.ctrlKey && event.key === 's') {
+        event.preventDefault(); // Prevent the default save action
+        exportLinks();
+        return;
+    }
+});
+
 document.getElementById('hiddenFileInput').addEventListener('change', (event) => {
     const file = event.target.files[0];
     if (file && file.name.endsWith('.countdown')) {
