--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -317,7 +317,7 @@
 
                 </div>
 		<p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:125px;">
-                    Be cautious of sharing personal information in your Countdowns
+                    Be cautious of sharing personal information
                 </p>
                 <h1 id="customizationoptions">Customization</h1>
                 <br>
