--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -64,6 +64,9 @@
         <span>Drop to Import File</span>
     </div>
 
+    <div id="toast-container"></div>
+
+
     <script>
 
 // Check if the browser is WebKit-based
