--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -336,18 +336,18 @@
                     </div>
                     <div class="colorpicker-container">
                         <input class="colorpicker" id="color2" type="color" value="#3ab6ff" onblur="SetCountDowngeneral();"/>
-                        <div class="remove-button" onclick="removeColorPicker(this)">-</div>
+                        <div class="remove-button" onclick="removeColorPicker(this)" title="Remove this color">-</div>
                     </div>
                     <div class="colorpicker-container">
                         <input class="colorpicker" id="color3" type="color" value="#00df52" onblur="SetCountDowngeneral();"/>
-                        <div class="remove-button" onclick="removeColorPicker(this)">-</div>
+                        <div class="remove-button" onclick="removeColorPicker(this)" title="Remove this color">-</div>
                     </div>
                     <div class="colorpicker-container">
                         <input class="colorpicker" id="color4" type="color" value="#ff9900" onblur="SetCountDowngeneral();"/>
-                        <div class="remove-button" onclick="removeColorPicker(this)">-</div>
+                        <div class="remove-button" onclick="removeColorPicker(this)" title="Remove this color">-</div>
                     </div>
                 </div>
-                <a class="clradd" onmouseup="addColorPicker()"><i class="fa-solid fa-plus"></i></a>
+                <a class="clradd" onmouseup="addColorPicker()"><i class="fa-solid fa-plus-circle"></i> Add a New Color</a>
 
                 <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">
                     The foreground elements will cycle through the chosen colors.
