--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -350,9 +350,9 @@
                 <a class="clradd" onmouseup="addColorPicker()"><i class="fa-solid fa-plus-circle"></i> Add a New Color</a>
 
                 <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">
-                    The foreground elements will cycle through the chosen colors.
+                    The foreground elements will cycle through the chosen colors
                     <br />
-                    Keep contrast in mind when choosing colors.
+                    Keep contrast in mind when choosing colors
                 </p>
                 <br />
                 <br />
@@ -533,7 +533,7 @@
     <div style="width:100%; margin:0px; padding:0px; border-top: #242424 2px solid; border-bottom: #242424 2px solid; margin-top: 150px; background: linear-gradient(to right, rgba(0,0,0,0), rgba(254,154,0,0.2))">
         <h1><i style="color: #FE9A00" class="fa-solid fa-user-lock"></i> Personal Options</h1>
         <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px;">Options that are universally applied across Countdowns you visit</p>
-        <p id="cdscheduledisclaimer" style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px; display:none; background:linear-gradient(to bottom right, #ff53535f, #00000000); border:#ff5353 2px dashed; border-radius:100px; padding:5px 10px 5px 10px; width:fit-content;"><i class="fa-regular fa-calendar-xmark"></i> Some options will not apply to Countdown Schedules.</p>
+        <p id="cdscheduledisclaimer" style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px; display:none; background:linear-gradient(to bottom right, #ff53535f, #00000000); border:#ff5353 2px dashed; border-radius:100px; padding:5px 10px 5px 10px; width:fit-content;"><i class="fa-regular fa-calendar-xmark"></i> Some options will not apply to Countdown Schedules</p>
     </div>
     <br />
     <br />
