--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -319,12 +319,12 @@
 		<p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:20px;">
                     Be cautious of sharing personal information
                 </p>
-		<div style="border-radius: 20px; background: #fe9a00; margin-bottom:20px; color: black; height: 180px; width:fit-content;">
-                        <p style="color:black; font-size:27px; line-height:0.1;">Local Shortcut</p>
-                        <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px; line-height:0.9">
+		<div style="border-radius: 20px; background: #fe9a00; margin-bottom:20px; color: black; padding:20px; height: 180px; width:fit-content;">
+                        <p style="color:black; font-size:27px;">Local Shortcut</p>
+                        <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px;">
                             For a dynamic bookmark that updates <br/>whenever this Countdown does, use your <br/>personal Local Shortcut link:
                         </p>
-                        <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px; line-height:0.9">https://michaeldors.com/mcacountdown/betatimer#title<br/>coming soon to chrome, works in webkit, untested in firefox</p>
+                        <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px;">https://michaeldors.com/mcacountdown/betatimer#title<br/>coming soon to chrome, works in webkit, untested in firefox</p>
                 </div>
                 <h1 id="customizationoptions">Customization</h1>
                 <br>
