--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -319,7 +319,7 @@
 		<p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:20px;">
                     Be cautious of sharing personal information
                 </p>
-		<div style="border-radius: 20px; background: #fe9a00; margin-bottom:20px; color: black; padding:20px; height: 180px; width:fit-content;">
+		<div style="border-radius: 20px; background: #fe9a00; margin-bottom:20px; color: black; padding:20px; height:fit-content; width:fit-content;">
                         <p style="color:black; font-size:27px;">Local Shortcut</p>
                         <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px;">
                             For a dynamic bookmark that updates <br/>whenever this Countdown does, use your <br/>personal Local Shortcut link:
