--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -324,8 +324,14 @@
                         <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px;">
                             For a dynamic bookmark that updates <br/>whenever this Countdown does, use your <br/>personal Local Shortcut link:
                         </p>
-                        <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px;">https://michaeldors.com/mcacountdown/betatimer#title<br/>coming soon to chrome, works in webkit, untested in firefox</p>
+			<input id="locallinkinput" class="input" />
+                	<button style="background:transparent; color:white; border:none; outline:none; cursor:pointer">
+                    		<i title="Copy Local Shortcut" class="fa fa-clone" style="transform:scale(1.75); padding-left:10px;" onclick="copyinputtextlocalshortcutlink()"></i>
+                	</button>
                 </div>
+		<p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:20px;">
+                    Works in Webkit, broken in Chromium, untested in Firefox
+                </p>
                 <h1 id="customizationoptions">Customization</h1>
                 <br>
                 <br>
