--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -324,9 +324,9 @@
                         <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px;">
                             For a dynamic bookmark that updates <br/>whenever this Countdown does, use your <br/>personal Local Shortcut link:
                         </p>
-			<input id="locallinkinput" class="input" />
+			<input id="locallinkinput" class="localshortcutinput" />
                 	<button style="background:transparent; color:white; border:none; outline:none; cursor:pointer">
-                    		<i title="Copy Local Shortcut" class="fa fa-clone" style="transform:scale(1.75); padding-left:10px;" onclick="copyinputtextlocalshortcutlink()"></i>
+                    		<i title="Copy Local Shortcut" class="fa fa-clone" style="transform:scale(1.75); padding-left:10px; color:#000000;" onclick="copyinputtextlocalshortcutlink()"></i>
                 	</button>
                 </div>
 		<p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:20px;">
