--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -305,7 +305,7 @@
                 </button>
                 <br />
                 <br />
-                <div style="border-radius: 20px; background: linear-gradient(to bottom right, #FFFFFF, #FFFFFF, #BD8BFF);margin-bottom:20px; padding: 20px; color: black; height: 180px; width:fit-content;">
+                <div id="qrcodecontainerdiv" style="border-radius: 20px; background: linear-gradient(to bottom right, #FFFFFF, #FFFFFF, #BD8BFF);margin-bottom:20px; padding: 20px; color: black; height: 180px; width:fit-content;">
                     <div id="qrcode" style="float: left; box-shadow: #ffffff 1px 1px 25px; padding-top: 15px; padding-left:20px; transform:scale(1.1)"></div>
                     <div style="float:left; padding-left:30px; text-align:left;">
                         <p style="color:black; font-size:27px; line-height:0.1;">QR Code</p>
@@ -319,7 +319,7 @@
 		<p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:20px;">
                     Be cautious of sharing personal information
                 </p>
-		<div style="border-radius: 20px; background: #fe9a00; margin-bottom:20px; color: black; padding:20px; height:fit-content; width:fit-content;">
+		<div id="localshortcutcontainerdiv" style="border-radius: 20px; background: #fe9a00; margin-bottom:20px; color: black; padding:20px; height:fit-content; width:fit-content;">
                         <p style="color:black; font-size:27px;">Local Shortcut</p>
                         <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px;">
                             For a dynamic bookmark that updates <br/>whenever this Countdown does, use your <br/>personal Local Shortcut link:
