--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -319,17 +319,19 @@
 		<p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:20px;">
                     Be cautious of sharing personal information
                 </p>
-		<div id="localshortcutcontainerdiv" style="border-radius: 20px; background: #fe9a00; margin-bottom:20px; color: black; padding:20px; height:fit-content; width:fit-content;">
+		<div id="localshortcutcontainerdiv" style="border-radius: 20px; background: #fe9a00; margin-bottom:20px; color: black; padding:20px;">
                         <p style="color:black; font-size:27px;">Local Shortcut</p>
                         <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px;">
-                            For a dynamic bookmark that updates <br/>whenever this Countdown does, use your <br/>personal Local Shortcut link:
+                            For a dynamic bookmark that updates whenever this Countdown does, use your personal Local Shortcut link:
                         </p>
 			<input id="locallinkinput" class="localshortcutinput" />
                 	<button style="background:transparent; color:white; border:none; outline:none; cursor:pointer">
                     		<i title="Copy Local Shortcut" class="fa fa-clone" style="transform:scale(1.75); padding-left:10px; color:#000000;" onclick="copyinputtextlocalshortcutlink()"></i>
                 	</button>
+			<br>
+			<br>
                 </div>
-		<p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:20px;">
+		<p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:125px;">
                     Works in Webkit, broken in Chromium, untested in Firefox
                 </p>
                 <h1 id="customizationoptions">Customization</h1>
