--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -322,7 +322,7 @@
 		<div id="localshortcutcontainerdiv" style="border-radius: 20px; background: #fe9a00; margin-bottom:20px; color: black; padding:20px;">
                         <p style="color:black; font-size:27px;">Local Shortcut</p>
                         <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px;">
-                            For a dynamic bookmark that updates whenever this Countdown does, use your personal Local Shortcut link:
+                            For a dynamic bookmark that updates with changes saved to Dashboard, use your personal Local Shortcut link:
                         </p>
 			<input id="locallinkinput" class="localshortcutinput" />
                 	<button style="background:transparent; color:white; border:none; outline:none; cursor:pointer">
