--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -320,7 +320,7 @@
                     Be cautious of sharing personal information
                 </p>
 		<div id="localshortcutcontainerdiv" style="border-radius: 20px; background: #fe9a00; margin-bottom:20px; color: black; padding:20px;">
-                        <p style="color:black; font-size:27px;">Local Shortcut</p>
+                        <p style="color:black; font-size:27px;"><i class="fa-solid fa-location-pin-lock"></i> Local Shortcut</p>
                         <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px;">
                             For a dynamic bookmark that updates with changes saved to Dashboard, use your personal Local Shortcut link:
                         </p>
