--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -42,7 +42,7 @@
 
 
         <div class="input-container">
-            <a title="Create a new Countdown" href="https://michaeldors.com/mcacountdown/betatimer.html?createnew=1" id="newcountdownbutton"><i class="fa-solid fa-circle-plus"></i> New Countdown</a>
+            <a title="Create a new Countdown" href="https://michaeldors.com/mcacountdown/betatimer?createnew=1" id="newcountdownbutton"><i class="fa-solid fa-circle-plus"></i> New Countdown</a>
                 <a title="Import a .countdown file from another device" onclick="importLinks();"><i class="fa-solid fa-file-import"></i> Import</a>
                 <a title="Export as a .countdown file" id="sharebuttonoptions" onclick="exportLinks();"><i class="fa-solid fa-download"></i> Export</a>
                 <a title="Reset all Countdown options and saved data" id="reset" class="warning" onclick="resetcookies();"><i class="fa-solid fa-trash"></i> Reset All</a>
