fix local shorcut panel width

--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -319,7 +319,7 @@
 		<p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:50px;">
                     Be cautious of sharing personal information
                 </p>
-		<div id="localshortcutcontainerdiv" style="border-radius: 20px; background: #fe9a00; margin-bottom:125px; color: black; padding:20px;">
+		<div id="localshortcutcontainerdiv" style="border-radius: 20px; background: #fe9a00; margin-bottom:125px; color: black; padding:20px; min-width:fit-content;">
                         <p style="color:black; font-size:27px;"><i class="fa-solid fa-location-pin-lock"></i> Local Shortcut</p>
                         <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px;">
                             For a dynamic bookmark that updates with changes saved to Dashboard, use your personal Local Shortcut link:
