--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -310,7 +310,7 @@
                     <div style="float:left; padding-left:30px; text-align:left;">
                         <p style="color:black; font-size:27px; line-height:0.1;">QR Code</p>
                         <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px; line-height:0.9">
-                            Scan on most camera apps<br /> to go to the countdown.
+                            Scan on most camera apps<br />to go to the countdown.
                         </p>
                         <a onmouseup="downloadQR()"><i class="fa-solid fa-download"></i> Download</a>
                     </div>
@@ -322,7 +322,7 @@
 		<div id="localshortcutcontainerdiv" style="border-radius: 20px; background: #fe9a00; margin-bottom:125px; color: black; padding:20px; min-width:fit-content;">
                         <p style="color:black; font-size:27px;"><i class="fa-solid fa-location-pin-lock"></i> Local Shortcut</p>
                         <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px;">
-                            For a dynamic bookmark that updates with changes saved to Dashboard, use your personal Local Shortcut link:
+                            For a dynamic bookmark that updates with changes saved</br>to Dashboard, use your personal Local Shortcut link:
                         </p>
 			<input id="locallinkinput" class="localshortcutinput" />
                 	<button style="background:transparent; color:white; border:none; outline:none; cursor:pointer">
