--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -316,7 +316,7 @@
                     </div>
 
                 </div>
-		<p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:50px;">
+		<p id="qrcodelinkcautiontext" style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:50px;">
                     Be cautious of sharing personal information
                 </p>
 		<div id="localshortcutcontainerdiv" style="border-radius: 20px; background: #fe9a00; margin-bottom:125px; color: black; padding:20px; min-width:fit-content;">
