Schedule Editor UI Update

--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -490,7 +490,6 @@
                         <div class="schedule-editor-section" id="exceptiondaycontainer">
                             <h2 style="font-family: 'Dosis';">Exception Days</h2>
                             <div class="schedule-form-group">
-                                <label for="schedule-exceptionDay">Add Exception Day:</label>
                                 <select id="schedule-exceptionDay">
                                     <option value="0">Sunday</option>
                                     <option value="1">Monday</option>
@@ -500,7 +499,7 @@
                                     <option value="5">Friday</option>
                                     <option value="6">Saturday</option>
                                 </select>
-                                <a id="schedule-addExceptionBtn"><i class="fa-solid fa-plus-circle"></i> Add Exception Day</a>
+                                <a id="schedule-addExceptionBtn" style="margin-left:0px !important; border-top-left-radius: 0px; border-bottom-left-radius: 0px;"><i class="fa-solid fa-plus-circle"></i> Add Exception Day</a>
                             </div>
                             <div style="font-family: 'Dosis'" id="schedule-exceptionList"></div>
                         </div>
